wrapping job listings, fixing width and height units

--- a/app/components/JobListingCard.module.css
+++ b/app/components/JobListingCard.module.css
@@ -1,13 +1,16 @@
 /** @format */
 
 .card {
-  font-family: 'Karla', sans-serif;
+  display: flex;
+  flex-direction: column;
+  font-family: "Karla", sans-serif;
   background: #fff;
-  border-radius: 10px;
+  border-radius: 16px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
-  width: 400px;
-  height: 270px;
-  padding: 8px;
+  width: 100%;
+  box-sizing: border-box;
+  height: stretch;
+  padding: 10px;
   margin-top: 20px;
   position: relative;
   border: 2px solid #a9a9a9;
